updated based on mohsen's comments

--- a/references.bib
+++ b/references.bib
@@ -226,3 +226,33 @@
 	url = {http://dx.doi.org/10.1164/rccm.202205-0963OC},
 	langid = {en}
 }
+
+@article{bhakta2023,
+	title = {Race and Ethnicity in Pulmonary Function Test Interpretation: An Official American Thoracic Society Statement},
+	author = {Bhakta, Nirav R. and Bime, Christian and Kaminsky, David A. and McCormack, Meredith C. and Thakur, Neeta and Stanojevic, Sanja and Baugh, Aaron D. and Braun, Lundy and Lovinsky-Desir, Stephanie and Adamson, Rosemary and Witonsky, Jonathan and Wise, Robert A. and Levy, Sean D. and Brown, Robert and Forno, Erick and Cohen, Robyn T. and Johnson, Meshell and Balmes, John and Mageto, Yolanda and Lee, Cathryn T. and Masekela, Refiloe and Weiner, Daniel J. and Irvin, Charlie G. and Swenson, Erik R. and Rosenfeld, Margaret and Schwartzstein, Richard M. and Agrawal, Anurag and Neptune, Enid and Wisnivesky, Juan P. and Ortega, Victor E. and Burney, Peter},
+	year = {2023},
+	month = {04},
+	date = {2023-04-15},
+	journal = {American Journal of Respiratory and Critical Care Medicine},
+	pages = {978--995},
+	volume = {207},
+	number = {8},
+	doi = {10.1164/rccm.202302-0310st},
+	url = {http://dx.doi.org/10.1164/rccm.202302-0310ST},
+	langid = {en}
+}
+
+@article{stanojevic2021,
+	title = {ERS/ATS technical standard on interpretive strategies for routine lung function tests},
+	author = {Stanojevic, Sanja and Kaminsky, David A. and Miller, Martin R. and Thompson, Bruce and Aliverti, Andrea and Barjaktarevic, Igor and Cooper, Brendan G. and Culver, Bruce and Derom, Eric and Hall, Graham L. and Hallstrand, Teal S. and Leuppi, Joerg D. and MacIntyre, Neil and McCormack, Meredith and Rosenfeld, Margaret and Swenson, Erik R.},
+	year = {2021},
+	month = {12},
+	date = {2021-12-23},
+	journal = {European Respiratory Journal},
+	pages = {2101499},
+	volume = {60},
+	number = {1},
+	doi = {10.1183/13993003.01499-2021},
+	url = {http://dx.doi.org/10.1183/13993003.01499-2021},
+	langid = {en}
+}
